# test

./: .gitignore  README.md  main.py  pyproject.toml
coffee_reporter/: cli.py  csv_reader.py  models.py  registry.py  render.py
coffee_reporter/reports/: __init__.py  base.py  median_coffee.py
tests/: test_cli.py  test_csv_reader.py  test_median_coffee_report.py
