[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-reports"
version = "0.1.0"
description = "CLI utility for generating reports from student prep CSV files"
requires-python = ">=3.10"
dependencies = [
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
